add basic auth
